--- a/myApp/src/app/tab1/tab1.page.html
+++ b/myApp/src/app/tab1/tab1.page.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar>
     <ion-title>
-      Tab One
+      Texas State Hiking App
     </ion-title>
   </ion-toolbar>
 </ion-header>
