--- a/myApp/src/app/tab2/tab2.page.html
+++ b/myApp/src/app/tab2/tab2.page.html
@@ -6,4 +6,7 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content></ion-content>
+<ion-content padding>
+<div #mapElement class="map"></div>
+
+</ion-content>
