--- a/myApp/src/app/tab1/tab1.page.html
+++ b/myApp/src/app/tab1/tab1.page.html
@@ -1,11 +1,140 @@
-<ion-header>
+
+    
+<ion-header translucent>
   <ion-toolbar>
     <ion-title>
-      Texas State Hiking App
+      Home
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<!---- create card for trails  -->
+
+<ion-content class="card-background-page">
+<ion-card>
+      <img src="https://assets.simpleviewinc.com/simpleview/image/fetch/c_fill,h_357,q_75,w_537/https://assets.simpleviewinc.com/simpleview/image/upload/crm/austin/Barton-Creek-Green-belt_Austin-Parks-and-Recreation-Department-5--6c2cc4dfa6c4701_6c2cc7c8-c93e-66f1-7dcada42018bbc7c.jpg">
+      <div class="card-title">Barton Creek</div>
+      <div class="card-subtitle">Austin,TX</div>
+      <ion-fab vertical="top" horizontal="end" slot="fixed">
+          <ion-fab-button (click)="presentModal()">
+            <ion-icon name="pin"></ion-icon>
+          </ion-fab-button>
+        </ion-fab>
+    
    
+      
+     
+  
+  </ion-card>
+  <ion-card>
+      <img src="https://assets.simpleviewinc.com/simpleview/image/fetch/c_fill,h_357,q_75,w_537/https://assets.simpleviewinc.com/simpleview/image/upload/crm/austin/Barton-Creek-Green-belt_Austin-Parks-and-Recreation-Department-5--6c2cc4dfa6c4701_6c2cc7c8-c93e-66f1-7dcada42018bbc7c.jpg">
+      <div class="card-title">Barton Creek</div>
+      <div class="card-subtitle">Austin,TX</div>
+      <ion-fab vertical="top" horizontal="end" slot="fixed">
+          <ion-fab-button>
+            <ion-icon name="pin"></ion-icon>
+          </ion-fab-button>
+        </ion-fab>
+    
+   
+      
+     
+  
+  </ion-card>
+  <ion-card>
+      <img src="https://assets.simpleviewinc.com/simpleview/image/fetch/c_fill,h_357,q_75,w_537/https://assets.simpleviewinc.com/simpleview/image/upload/crm/austin/Barton-Creek-Green-belt_Austin-Parks-and-Recreation-Department-5--6c2cc4dfa6c4701_6c2cc7c8-c93e-66f1-7dcada42018bbc7c.jpg">
+      <div class="card-title">Barton Creek</div>
+      <div class="card-subtitle">Austin,TX</div>
+      <ion-fab vertical="top" horizontal="end" slot="fixed">
+          <ion-fab-button>
+            <ion-icon name="pin"></ion-icon>
+          </ion-fab-button>
+        </ion-fab>
+    
+   
+      
+     
+  
+  </ion-card>
+  <ion-card>
+      <img src="https://assets.simpleviewinc.com/simpleview/image/fetch/c_fill,h_357,q_75,w_537/https://assets.simpleviewinc.com/simpleview/image/upload/crm/austin/Barton-Creek-Green-belt_Austin-Parks-and-Recreation-Department-5--6c2cc4dfa6c4701_6c2cc7c8-c93e-66f1-7dcada42018bbc7c.jpg">
+      <div class="card-title">Barton Creek</div>
+      <div class="card-subtitle">Austin,TX</div>
+      <ion-fab vertical="top" horizontal="end" slot="fixed">
+          <ion-fab-button>
+            <ion-icon name="pin"></ion-icon>
+          </ion-fab-button>
+        </ion-fab>
+    
+   
+      
+     
+  
+  </ion-card>
 </ion-content>
+
+
+<script>
+    customElements.define('modal-content', class ModalContent extends HTMLElement {
+      connectedCallback() {
+        this.innerHTML = `
+          <ion-header translucent>
+            <ion-toolbar>
+              <ion-title>Modal Content</ion-title>
+              <ion-buttons slot="end">
+                <ion-button onclick="dismissModal()">Close</ion-button>
+              </ion-buttons>
+            </ion-toolbar>
+          </ion-header>
+          <ion-content fullscreen>
+            <ion-list>
+              <ion-item>
+                <ion-avatar slot="start">
+                  <ion-img src="./avatar-gollum.jpg"/>
+                </ion-avatar>
+                <ion-label>
+                  <h2>Gollum</h2>
+                  <p>Sneaky little hobbitses!</p>
+                </ion-label>
+              </ion-item>
+              <ion-item>
+                <ion-avatar slot="start">
+                  <ion-img src="./avatar-frodo.jpg"/>
+                </ion-avatar>
+                <ion-label>
+                  <h2>Frodo</h2>
+                  <p>Go back, Sam! I'm going to Mordor alone!</p>
+                </ion-label>
+              </ion-item>
+              <ion-item>
+                <ion-avatar slot="start">
+                  <ion-img src="./avatar-samwise.jpg"/>
+                </ion-avatar>
+                <ion-label>
+                  <h2>Samwise</h2>
+                  <p>What we need is a few good taters.</p>
+                </ion-label>
+              </ion-item>
+            </ion-list>
+          </ion-content>
+        `;
+      }
+    });
+    let currentModal = null;
+    const controller = document.querySelector('ion-card');
+    const button = document.querySelector('ion-button');
+    button.addEventListener('click', createModal);
+    function createModal() {
+      controller.create({
+        component: 'modal-content'
+      }).then(modal => {
+        modal.present();
+        currentModal = modal;
+      });
+    }
+    function dismissModal() {
+      if (currentModal) {
+        currentModal.dismiss().then(() => { currentModal = null; });
+      }
+    }
+  </script>
