--- a/myApp/src/app/modal-page/modal-page.page.html
+++ b/myApp/src/app/modal-page/modal-page.page.html
@@ -5,5 +5,5 @@
 </ion-header>
 
 <ion-content>
-<ion-button (click)="Dismiss()">Dismiss</ion-button>
+<ion-button (click)="dismiss()">Dismiss</ion-button>
 </ion-content>
