--- a/myApp/src/app/tab1/tab1.page.html
+++ b/myApp/src/app/tab1/tab1.page.html
@@ -1,10 +1,12 @@
 
     
-<ion-header translucent>
-  <ion-toolbar>
+<ion-header>
+  <ion-toolbar color="primary">
     <ion-title>
-      Home
+       <ion-img src="..\assets\icon\TXSTimg.jpg" ></ion-img>
+        <p> </p>
     </ion-title>
+    
   </ion-toolbar>
 </ion-header>
 
@@ -15,7 +17,7 @@
       <img src="https://assets.simpleviewinc.com/simpleview/image/fetch/c_fill,h_357,q_75,w_537/https://assets.simpleviewinc.com/simpleview/image/upload/crm/austin/Barton-Creek-Green-belt_Austin-Parks-and-Recreation-Department-5--6c2cc4dfa6c4701_6c2cc7c8-c93e-66f1-7dcada42018bbc7c.jpg">
       <div class="card-title">Barton Creek</div>
       <div class="card-subtitle">Austin,TX</div>
-      <ion-fab vertical="top" horizontal="end" slot="fixed">
+      <ion-fab vertical="bottom" horizontal="end" slot="fixed">
           <ion-fab-button (click)="presentModal()">
             <ion-icon name="pin"></ion-icon>
           </ion-fab-button>
@@ -23,14 +25,15 @@
     
    
       
-     
+        <ion-button expand="full" fill="outline" >About This Trail</ion-button>
+
   
   </ion-card>
   <ion-card>
       <img src="https://assets.simpleviewinc.com/simpleview/image/fetch/c_fill,h_357,q_75,w_537/https://assets.simpleviewinc.com/simpleview/image/upload/crm/austin/Barton-Creek-Green-belt_Austin-Parks-and-Recreation-Department-5--6c2cc4dfa6c4701_6c2cc7c8-c93e-66f1-7dcada42018bbc7c.jpg">
-      <div class="card-title">Barton Creek</div>
+      <div class="card-title">River Place Nature Trail</div>
       <div class="card-subtitle">Austin,TX</div>
-      <ion-fab vertical="top" horizontal="end" slot="fixed">
+      <ion-fab vertical="bottom" horizontal="end" slot="fixed">
           <ion-fab-button>
             <ion-icon name="pin"></ion-icon>
           </ion-fab-button>
@@ -39,13 +42,14 @@
    
       
      
-  
+        <ion-button expand="full" fill="outline" >About This Trail</ion-button>
+ 
   </ion-card>
   <ion-card>
       <img src="https://assets.simpleviewinc.com/simpleview/image/fetch/c_fill,h_357,q_75,w_537/https://assets.simpleviewinc.com/simpleview/image/upload/crm/austin/Barton-Creek-Green-belt_Austin-Parks-and-Recreation-Department-5--6c2cc4dfa6c4701_6c2cc7c8-c93e-66f1-7dcada42018bbc7c.jpg">
-      <div class="card-title">Barton Creek</div>
+      <div class="card-title">Turkey Creek Trail</div>
       <div class="card-subtitle">Austin,TX</div>
-      <ion-fab vertical="top" horizontal="end" slot="fixed">
+      <ion-fab vertical="bottom" horizontal="end" slot="fixed">
           <ion-fab-button>
             <ion-icon name="pin"></ion-icon>
           </ion-fab-button>
@@ -54,13 +58,14 @@
    
       
      
-  
+        <ion-button expand="full" fill="outline" >About This Trail</ion-button>
+
   </ion-card>
   <ion-card>
       <img src="https://assets.simpleviewinc.com/simpleview/image/fetch/c_fill,h_357,q_75,w_537/https://assets.simpleviewinc.com/simpleview/image/upload/crm/austin/Barton-Creek-Green-belt_Austin-Parks-and-Recreation-Department-5--6c2cc4dfa6c4701_6c2cc7c8-c93e-66f1-7dcada42018bbc7c.jpg">
-      <div class="card-title">Barton Creek</div>
+      <div class="card-title">St. Edward's Park</div>
       <div class="card-subtitle">Austin,TX</div>
-      <ion-fab vertical="top" horizontal="end" slot="fixed">
+      <ion-fab vertical="bottom" horizontal="end" slot="fixed">
           <ion-fab-button>
             <ion-icon name="pin"></ion-icon>
           </ion-fab-button>
@@ -69,7 +74,7 @@
    
       
      
-  
+  <ion-button expand="full" fill="outline" >About This Trail</ion-button>
   </ion-card>
 </ion-content>
 
@@ -77,47 +82,7 @@
 <script>
     customElements.define('modal-content', class ModalContent extends HTMLElement {
       connectedCallback() {
-        this.innerHTML = `
-          <ion-header translucent>
-            <ion-toolbar>
-              <ion-title>Modal Content</ion-title>
-              <ion-buttons slot="end">
-                <ion-button onclick="dismissModal()">Close</ion-button>
-              </ion-buttons>
-            </ion-toolbar>
-          </ion-header>
-          <ion-content fullscreen>
-            <ion-list>
-              <ion-item>
-                <ion-avatar slot="start">
-                  <ion-img src="./avatar-gollum.jpg"/>
-                </ion-avatar>
-                <ion-label>
-                  <h2>Gollum</h2>
-                  <p>Sneaky little hobbitses!</p>
-                </ion-label>
-              </ion-item>
-              <ion-item>
-                <ion-avatar slot="start">
-                  <ion-img src="./avatar-frodo.jpg"/>
-                </ion-avatar>
-                <ion-label>
-                  <h2>Frodo</h2>
-                  <p>Go back, Sam! I'm going to Mordor alone!</p>
-                </ion-label>
-              </ion-item>
-              <ion-item>
-                <ion-avatar slot="start">
-                  <ion-img src="./avatar-samwise.jpg"/>
-                </ion-avatar>
-                <ion-label>
-                  <h2>Samwise</h2>
-                  <p>What we need is a few good taters.</p>
-                </ion-label>
-              </ion-item>
-            </ion-list>
-          </ion-content>
-        `;
+        
       }
     });
     let currentModal = null;
