--- a/myApp/src/app/tab1/tab1.page.scss
+++ b/myApp/src/app/tab1/tab1.page.scss
@@ -28,3 +28,23 @@
 
 }
 
+ion-img {
+  
+  height: 65px;
+  
+
+}
+ion-fab{
+  --color-active: rgb(122, 33, 55);
+  border-style: solid;
+  border-radius: 50%;
+  border-width: 2px;
+  border-color: rgb(122, 33, 55);
+  --hover-color:rgb(122, 33, 55);
+  --color-hover:rgb(122, 33, 55);
+  --hover-background:rgb(122, 33, 55);
+  --color-background:rgb(122, 33, 55);
+  
+
+
+}
