--- a/myApp/src/app/tab2/tab2.page.html
+++ b/myApp/src/app/tab2/tab2.page.html
@@ -1,12 +1,14 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>
-      Trails
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
+    <ion-toolbar color="primary">
+      <ion-title>
+         <ion-img src="..\assets\icon\TXSTimg.jpg" ></ion-img>
+          <p> </p>
+      </ion-title>
+      
+    </ion-toolbar>
+  </ion-header>
 
 <ion-content padding>
-<div #mapElement class="map"></div>
+
 
 </ion-content>
