--- a/myApp/src/app/tabs/tabs.page.scss
+++ b/myApp/src/app/tabs/tabs.page.scss
@@ -1,1 +1,9 @@
-
+ion-tab-bar{
+    
+    --color: rgb(122, 33, 55);
+    --background: rgb(199, 201, 91);
+    --color-active: white;
+}
+ion-tab-button {
+    --color-selected: white;
+   }
