--- a/myApp/src/theme/variables.scss
+++ b/myApp/src/theme/variables.scss
@@ -5,8 +5,9 @@
 :root {
 
   /** primary **/
-  --ion-color-primary: #3880ff;
-  --ion-color-primary-rgb: 56, 128, 255;
+  
+  --ion-color-primary: #c7c95b;
+  --ion-color-primary-rgb: 199, 201, 91;
   --ion-color-primary-contrast: #ffffff;
   --ion-color-primary-contrast-rgb: 255, 255, 255;
   --ion-color-primary-shade: #3171e0;
