--- a/myApp/src/app/tab3/tab3.page.html
+++ b/myApp/src/app/tab3/tab3.page.html
@@ -1,9 +1,14 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>
-      Tab Three
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
+    <ion-toolbar color="primary">
+      <ion-title>
+         <ion-img src="..\assets\icon\TXSTimg.jpg" ></ion-img>
+          <p> </p>
+      </ion-title>
+      
+    </ion-toolbar>
+  </ion-header>
 
-<ion-content></ion-content>
+<ion-content>
+<ion-input>City</ion-input>
+<ion-button>Get Weather</ion-button>
+</ion-content>
