--- a/myApp/src/app/tabs/tabs.page.html
+++ b/myApp/src/app/tabs/tabs.page.html
@@ -3,12 +3,12 @@
   <ion-tab-bar slot="bottom">
     <ion-tab-button tab="tab1">
       <ion-icon name="home"></ion-icon>
-      <ion-label>Home</ion-label>
+      <ion-label>Trail List</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="tab2">
       <ion-icon name="apps"></ion-icon>
-      <ion-label>Trails</ion-label>
+      <ion-label>My Trails</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="tab3">
