Added UI and Weather API
Added Weather API finally working.. gave it a little UI super basic

--- a/myApp/src/app/tab3/tab3.page.html
+++ b/myApp/src/app/tab3/tab3.page.html
@@ -9,6 +9,9 @@
   </ion-header>
 
 <ion-content>
-<ion-input>City</ion-input>
-<ion-button>Get Weather</ion-button>
+  <ion-card>
+  <div class="ion-padding">
+    <span><img src={{icon}}/><span style="position: relative; bottom: 15px;">Temperature: {{temperature}}</span><p></p><span style="position: relative; bottom: 15px;">Place: {{place}}</span><p></p><span style="position: relative; bottom: 15px;">Conditions: {{type}}</span></span>
+  </div>
+</ion-card>
 </ion-content>
