--- a/myApp/src/app/tab3/tab3.page.scss
+++ b/myApp/src/app/tab3/tab3.page.scss
@@ -1,1 +1,9 @@
-
+span{ 
+    color: black; 
+    //text-decoration: underline; 
+    //font-style: italic; 
+    font-weight: bold; 
+    font-size: 22px; 
+    background-color: #c7c95b;
+    text-align: middle;
+    }  
