Added More functionality to Weather App potion on tab3 and created pages for trail info

--- a/myApp/src/global.scss
+++ b/myApp/src/global.scss
@@ -27,6 +27,7 @@
 
 ion-toolbar{
     color:rgb(122, 33, 55) ;
+    size: auto;
     
 }
 ion-fab{
@@ -39,6 +40,8 @@ ion-fab{
   ion-img {
   
     height: 65px;
-    
+    vertical-align: bottom;
   
   }
+  
+  
