--- a/myApp/src/app/tab3/tab3.page.html
+++ b/myApp/src/app/tab3/tab3.page.html
@@ -1,5 +1,5 @@
-<ion-header>
-    <ion-toolbar color="primary">
+<ion-header padding>
+    <ion-toolbar color="primary" padding >
       <ion-title>
          <ion-img src="..\assets\icon\TXSTimg.jpg" ></ion-img>
           <p> </p>
@@ -11,7 +11,15 @@
 <ion-content>
   <ion-card>
   <div class="ion-padding">
-    <span><img src={{icon}}/><span style="position: relative; bottom: 15px;">Temperature: {{temperature}}</span><p></p><span style="position: relative; bottom: 15px;">Place: {{place}}</span><p></p><span style="position: relative; bottom: 15px;">Conditions: {{type}}</span></span>
+    <span><img src={{icon}}/><span style="position: relative; bottom: 15px;">Temperature: {{temperature}}</span><p>
+
+    </p><span style="position: relative; bottom: 15px;">Place: {{place}}</span><p>
+
+    </p><span style="position: relative; bottom: 15px;">Conditions: {{type}}</span><p>
+
+    </p><span style="position: relative; bottom: 15px;">Humidity: {{humidity}}</span><p>
+      
+    </p><span style="position: relative; bottom: 15px;" class="HikingSugg">Suggested Attire for your Hike: <p></p> {{SuggestedOutfit}}</span></span>
   </div>
 </ion-card>
 </ion-content>
