UI changes to work for all versions of IPhoneX with large notch at top.

--- a/myApp/src/app/Trail-Pages/st-edwards-park/st-edwards-park.page.html
+++ b/myApp/src/app/Trail-Pages/st-edwards-park/st-edwards-park.page.html
@@ -1,5 +1,6 @@
 <ion-header>
   <ion-toolbar>
+      <ion-icon name="close-circle-outline" slot="end" size="large" routerLink="" routerDirection="root"></ion-icon>
     <ion-title>St-Edwards-Park</ion-title>
   </ion-toolbar>
 </ion-header>
