--- a/myApp/src/app/tab1/tab1.page.html
+++ b/myApp/src/app/tab1/tab1.page.html
@@ -1,18 +1,16 @@
-
-    
 <ion-header>
-  <ion-toolbar color="primary">
-    <ion-title>
-       <ion-img src="..\assets\icon\TXSTimg.jpg" ></ion-img>
-        <p> </p>
-    </ion-title>
-    
-  </ion-toolbar>
-</ion-header>
+    <ion-toolbar color="primary">
+      
+         <ion-img src="..\assets\TXSTimg.jpg" ></ion-img>
+          
+      
+      
+    </ion-toolbar>
+  </ion-header>
 
 <!---- create card for trails  -->
 
-<ion-content class="card-background-page">
+<ion-content class="card-background-page" padding-top padding-bottom>
 <ion-card>
       <img src="https://assets.simpleviewinc.com/simpleview/image/fetch/c_fill,h_357,q_75,w_537/https://assets.simpleviewinc.com/simpleview/image/upload/crm/austin/Barton-Creek-Green-belt_Austin-Parks-and-Recreation-Department-5--6c2cc4dfa6c4701_6c2cc7c8-c93e-66f1-7dcada42018bbc7c.jpg">
       <div class="card-title">Barton Creek</div>
@@ -25,7 +23,10 @@
     
    
       
-        <ion-button expand="full" fill="outline" >About This Trail</ion-button>
+        <ion-item routerLink="/barton-creek" routerDirection="root">
+          <ion-icon slot="start" color="white" name="add-circle-outline"></ion-icon>
+          <ion-label>About Barton Creek Trail</ion-label>
+        </ion-item>
 
   
   </ion-card>
@@ -34,7 +35,7 @@
       <div class="card-title">River Place Nature Trail</div>
       <div class="card-subtitle">Austin,TX</div>
       <ion-fab vertical="bottom" horizontal="end" slot="fixed">
-          <ion-fab-button>
+          <ion-fab-button (click)="presentModal()">
             <ion-icon name="pin"></ion-icon>
           </ion-fab-button>
         </ion-fab>
@@ -42,7 +43,10 @@
    
       
      
-        <ion-button expand="full" fill="outline" >About This Trail</ion-button>
+        <ion-item routerLink="/river-place-nature-trail" routerDirection="root">
+          <ion-icon slot="start" color="white" name="add-circle-outline"></ion-icon>
+          <ion-label>About River Place Nature Trail</ion-label>
+        </ion-item>
  
   </ion-card>
   <ion-card>
@@ -50,7 +54,7 @@
       <div class="card-title">Turkey Creek Trail</div>
       <div class="card-subtitle">Austin,TX</div>
       <ion-fab vertical="bottom" horizontal="end" slot="fixed">
-          <ion-fab-button>
+          <ion-fab-button (click)="presentModal()">
             <ion-icon name="pin"></ion-icon>
           </ion-fab-button>
         </ion-fab>
@@ -58,7 +62,10 @@
    
       
      
-        <ion-button expand="full" fill="outline" >About This Trail</ion-button>
+        <ion-item routerLink="/turkey-creek-trail" routerDirection="root">
+          <ion-icon slot="start" color="white" name="add-circle-outline"></ion-icon>
+          <ion-label>About Turkey Creek Trail</ion-label>
+        </ion-item>
 
   </ion-card>
   <ion-card>
@@ -66,7 +73,7 @@
       <div class="card-title">St. Edward's Park</div>
       <div class="card-subtitle">Austin,TX</div>
       <ion-fab vertical="bottom" horizontal="end" slot="fixed">
-          <ion-fab-button>
+          <ion-fab-button (click)="presentModal()">
             <ion-icon name="pin"></ion-icon>
           </ion-fab-button>
         </ion-fab>
@@ -74,7 +81,10 @@
    
       
      
-  <ion-button expand="full" fill="outline" >About This Trail</ion-button>
+        <ion-item routerLink="/st-edwards-park" routerDirection="root">
+          <ion-icon slot="start" color="white" name="add-circle-outline"></ion-icon>
+          <ion-label>About St. Edward's Park Trail</ion-label>
+        </ion-item> 
   </ion-card>
 </ion-content>
 
