--- a/myApp/src/app/Trail-Pages/barton-creek/barton-creek.page.html
+++ b/myApp/src/app/Trail-Pages/barton-creek/barton-creek.page.html
@@ -1,5 +1,6 @@
 <ion-header>
   <ion-toolbar>
+      <ion-icon name="close-circle-outline" slot="end" size="large" routerLink="" routerDirection="root"></ion-icon>
     <ion-title>Barton-Creek</ion-title>
   </ion-toolbar>
 </ion-header>
