--- a/myApp/src/app/Trail-Pages/river-place-nature-trail/river-place-nature-trail.page.html
+++ b/myApp/src/app/Trail-Pages/river-place-nature-trail/river-place-nature-trail.page.html
@@ -1,5 +1,6 @@
 <ion-header>
   <ion-toolbar>
+      <ion-icon name="close-circle-outline" slot="end" size="large" routerLink="" routerDirection="root"></ion-icon>
     <ion-title>River-Place-Nature-Trail</ion-title>
   </ion-toolbar>
 </ion-header>
