--- a/myApp/src/app/modal-page/modal-page.page.html
+++ b/myApp/src/app/modal-page/modal-page.page.html
@@ -1,11 +1,10 @@
+  <ion-header>
+      <ion-icon name="arrow-back" slot="start" size="large" (click)="dismiss()">Back</ion-icon>
+    <ion-toolbar color="primary" padding>
 
-<ion-header>
-    <ion-toolbar color="primary">
-        <ion-icon name="close-circle-outline" slot="end" (click)="dismiss()"></ion-icon>
-      <ion-title>
-         <ion-img src="..\assets\icon\TXSTimg.jpg" ></ion-img>
-          <p> </p>
-      </ion-title>
+         <ion-img src="../assets/TXSTimg.jpg" padding ></ion-img>
+         
+      
       
     </ion-toolbar>
   </ion-header>
