--- a/myApp/src/app/tab1/tab1.page.scss
+++ b/myApp/src/app/tab1/tab1.page.scss
@@ -28,12 +28,6 @@
 
 }
 
-ion-img {
-  
-  height: 65px;
-  
-
-}
 ion-fab{
   --color-active: rgb(122, 33, 55);
   border-style: solid;
@@ -47,4 +41,11 @@ ion-fab{
   
 
 
+}
+
+ion-item{
+  font-weight: bold;
+  color: rgb(122, 33, 55);
+  background-color: white ;
+  --background: #c7c95b;
 }
