--- a/myApp/src/app/tab2/tab2.page.html
+++ b/myApp/src/app/tab2/tab2.page.html
@@ -1,9 +1,8 @@
 <ion-header>
-    <ion-toolbar color="primary">
-      <ion-title>
-         <ion-img src="..\assets\icon\TXSTimg.jpg" ></ion-img>
-          <p> </p>
-      </ion-title>
+    <ion-toolbar color="primary" padding>
+      
+      <ion-img src="../assets/TXSTimg.jpg" ></ion-img>         
+      
       
     </ion-toolbar>
   </ion-header>
