--- a/myApp/src/app/tab3/tab3.page.html
+++ b/myApp/src/app/tab3/tab3.page.html
@@ -1,25 +1,29 @@
-<ion-header padding>
-    <ion-toolbar color="primary" padding >
-      <ion-title>
-         <ion-img src="..\assets\icon\TXSTimg.jpg" ></ion-img>
-          <p> </p>
-      </ion-title>
+<ion-header>
+    <ion-toolbar color="primary" padding>
+      
+      <ion-img src="../assets/TXSTimg.jpg" ></ion-img>
+         
+      
       
     </ion-toolbar>
   </ion-header>
 
 <ion-content>
-  <ion-card>
+  <ion-card color="primary">
   <div class="ion-padding">
-    <span><img src={{icon}}/><span style="position: relative; bottom: 15px;">Temperature: {{temperature}}</span><p>
-
-    </p><span style="position: relative; bottom: 15px;">Place: {{place}}</span><p>
-
-    </p><span style="position: relative; bottom: 15px;">Conditions: {{type}}</span><p>
-
-    </p><span style="position: relative; bottom: 15px;">Humidity: {{humidity}}</span><p>
-      
-    </p><span style="position: relative; bottom: 15px;" class="HikingSugg">Suggested Attire for your Hike: <p></p> {{SuggestedOutfit}}</span></span>
+    <span><img src={{icon}}/></span>
   </div>
+</ion-card>
+<ion-card padding color="primary">
+    
+        <span><span style="position: relative; bottom: 15px;">Temperature: {{temperature}}</span><p>
+      
+        </p><span style="position: relative; bottom: 15px;">Place: {{place}}</span><p>
+    
+        </p><span style="position: relative; bottom: 15px;">Conditions: {{type}}</span><p>
+    
+        </p><span style="position: relative; bottom: 15px;">Humidity: {{humidity}}</span><p>
+          
+        </p><span style="position: relative; bottom: 15px;" class="HikingSugg">Suggested Attire for your Hike: <p></p> {{SuggestedOutfit}}</span></span>
 </ion-card>
 </ion-content>
