--- a/myApp/src/theme/variables.scss
+++ b/myApp/src/theme/variables.scss
@@ -14,8 +14,8 @@
   --ion-color-primary-tint: #4c8dff;
 
   /** secondary **/
-  --ion-color-secondary: #0cd1e8;
-  --ion-color-secondary-rgb: 12, 209, 232;
+  --ion-color-secondary: #7a2137;
+  --ion-color-secondary-rgb: 122, 33, 55;
   --ion-color-secondary-contrast: #ffffff;
   --ion-color-secondary-contrast-rgb: 255, 255, 255;
   --ion-color-secondary-shade: #0bb8cc;
