Added Headers on links to trail pages

--- a/myApp/src/app/Trail-Pages/barton-creek/barton-creek.page.html
+++ b/myApp/src/app/Trail-Pages/barton-creek/barton-creek.page.html
@@ -1,10 +1,21 @@
 <ion-header>
-  <ion-toolbar>
-      <ion-icon name="close-circle-outline" slot="end" size="large" routerLink="" routerDirection="root"></ion-icon>
-    <ion-title>Barton-Creek</ion-title>
-  </ion-toolbar>
-</ion-header>
+    <ion-toolbar color="primary" >
+        
+         <ion-img class="modalimg" src="../assets/TXSTimg.jpg" padding-right ></ion-img>
+        
+            <ion-icon name="arrow-back" slot="start" size="large" routerLink="" routerDirection="root" >Back</ion-icon>
+         
+      
+      
+    </ion-toolbar>
+   
+  </ion-header>
 
-<ion-content>
-
+<ion-content padding-top padding-bottom>
+<ion-card color="primary" padding>
+    <ion-card-header>
+        <ion-card-title>Barton Creek Trail</ion-card-title>
+        <ion-card-subtitle> 3755 S Capital of Texas Hwy B, Austin, TX 78704</ion-card-subtitle>
+      </ion-card-header>
+</ion-card>
 </ion-content>
