--- a/myApp/src/app/modal-page/modal-page.page.html
+++ b/myApp/src/app/modal-page/modal-page.page.html
@@ -1,12 +1,14 @@
   <ion-header>
-      <ion-icon name="arrow-back" slot="start" size="large" (click)="dismiss()">Back</ion-icon>
-    <ion-toolbar color="primary" padding>
-
-         <ion-img src="../assets/TXSTimg.jpg" padding ></ion-img>
+    <ion-toolbar color="primary" >
+        
+         <ion-img class="modalimg" src="../assets/TXSTimg.jpg" padding-right ></ion-img>
+        
+            <ion-icon name="arrow-back" slot="start" size="large" (click)="dismiss()" >Back</ion-icon>
          
       
       
     </ion-toolbar>
+   
   </ion-header>
 <ion-content>
 
