--- a/myApp/src/app/Trail-Pages/st-edwards-park/st-edwards-park.page.html
+++ b/myApp/src/app/Trail-Pages/st-edwards-park/st-edwards-park.page.html
@@ -1,10 +1,18 @@
 <ion-header>
-  <ion-toolbar>
-      <ion-icon name="close-circle-outline" slot="end" size="large" routerLink="" routerDirection="root"></ion-icon>
-    <ion-title>St-Edwards-Park</ion-title>
-  </ion-toolbar>
-</ion-header>
+    <ion-toolbar color="primary" >
+        
+         <ion-img class="modalimg" src="../assets/TXSTimg.jpg" padding-right ></ion-img>
+        
+            <ion-icon name="arrow-back" slot="start" size="large" routerLink="" routerDirection="root" >Back</ion-icon>
+         
+      
+      
+    </ion-toolbar>
+   
+  </ion-header>
 
 <ion-content>
-
+    <ion-card color="secondary">
+        <ion-card-header>Stz Edwards Park</ion-card-header>
+    </ion-card>
 </ion-content>
