--- a/myApp/src/app/tab1/tab1.page.html
+++ b/myApp/src/app/tab1/tab1.page.html
@@ -11,7 +11,7 @@
 <!---- create card for trails  -->
 
 <ion-content class="card-background-page" padding-top padding-bottom>
-<ion-card>
+<ion-card padding-top>
       <img src="https://assets.simpleviewinc.com/simpleview/image/fetch/c_fill,h_357,q_75,w_537/https://assets.simpleviewinc.com/simpleview/image/upload/crm/austin/Barton-Creek-Green-belt_Austin-Parks-and-Recreation-Department-5--6c2cc4dfa6c4701_6c2cc7c8-c93e-66f1-7dcada42018bbc7c.jpg">
       <div class="card-title">Barton Creek</div>
       <div class="card-subtitle">Austin,TX</div>
