UI chnged and updated

--- a/myApp/src/app/Trail-Pages/river-place-nature-trail/river-place-nature-trail.page.html
+++ b/myApp/src/app/Trail-Pages/river-place-nature-trail/river-place-nature-trail.page.html
@@ -11,8 +11,19 @@
    
   </ion-header>
 
-<ion-content>
-    <ion-card>
-        <ion-card-header>River Place Nature Trail</ion-card-header>
+<ion-content padding-top padding-bottom>
+    <ion-card color="primary" padding>
+        <ion-card-header>
+            <ion-card-subtitle>Trail: </ion-card-subtitle> 
+          <ion-card-title>River Place Nature Trail</ion-card-title>
+          </ion-card-header>
+          <ion-card-content>
+             <ion-item> <b>Address:</b> 4998 River Pl Blvd, Austin, TX 78730</ion-item>
+             <ion-item> <b>Trail Length:</b> </ion-item>
+             <ion-item> <b>Estimated Hike Time:</b> </ion-item>
+             <ion-item> <b>Pets Allowed:</b> </ion-item>
+             <ion-item> <b>Camping Allowed:</b> </ion-item>
+             <ion-item> <b>Fires Allowed:</b> </ion-item>
+            </ion-card-content>
     </ion-card>
 </ion-content>
