--- a/myApp/src/app/Trail-Pages/barton-creek/barton-creek.page.html
+++ b/myApp/src/app/Trail-Pages/barton-creek/barton-creek.page.html
@@ -14,8 +14,37 @@
 <ion-content padding-top padding-bottom>
 <ion-card color="primary" padding>
     <ion-card-header>
-        <ion-card-title>Barton Creek Trail</ion-card-title>
-        <ion-card-subtitle> 3755 S Capital of Texas Hwy B, Austin, TX 78704</ion-card-subtitle>
+        <ion-card-subtitle>Trail: </ion-card-subtitle> 
+      <ion-card-title>Barton Creek Trail</ion-card-title>
       </ion-card-header>
+      <ion-card-content>
+         <ion-item> <b>Address:</b> 3755 S Capital of Texas Hwy B, Austin, TX 78704</ion-item>
+         <ion-item> <b>Trail Length:</b> </ion-item>
+         <ion-item> <b>Estimated Hike Time:</b> </ion-item>
+         <ion-item> <b>Pets Allowed:</b> </ion-item>
+         <ion-item> <b>Camping Allowed:</b> </ion-item>
+         <ion-item> <b>Fires Allowed:</b> </ion-item>
+        </ion-card-content>
+        <ion-button expand="full" color="secondary">Add to My Trail List</ion-button>
+</ion-card>
+<ion-card>
+<ion-slides scrollbar="true">
+  <ion-slide style="width:100%;height: 2.0in;">
+      <img class="slideimg" src="../assets/Barton1.jpg" style="width:100%;height:auto;" >
+  </ion-slide>
+  <ion-slide style="width:100%;height: 2.0in;">
+      <img class="slideimg" src="../assets/Barton2.jpg" style="width:100%;height:auto;" >
+  </ion-slide>
+  <ion-slide>
+    
+  </ion-slide>
+  <ion-slide>
+
+  </ion-slide>
+  <ion-slide>
+
+  </ion-slide>
+
+</ion-slides>
 </ion-card>
 </ion-content>
