--- a/myApp/src/app/Trail-Pages/st-edwards-park/st-edwards-park.page.html
+++ b/myApp/src/app/Trail-Pages/st-edwards-park/st-edwards-park.page.html
@@ -11,8 +11,20 @@
    
   </ion-header>
 
-<ion-content>
-    <ion-card color="secondary">
-        <ion-card-header>Stz Edwards Park</ion-card-header>
+<ion-content padding-top padding-bottom>
+    <ion-card color="primary" padding>
+        <ion-card-header>
+            <ion-card-subtitle>Trail: </ion-card-subtitle> 
+          <ion-card-title>St.Edwards Park</ion-card-title>
+          </ion-card-header>
+          <ion-card-content>
+             <ion-item> <b>Address:</b> 7301 Spicewood Springs Rd, Austin, TX 78759</ion-item>
+             <ion-item> <b>Trail Length:</b> </ion-item>
+             <ion-item> <b>Estimated Hike Time:</b> </ion-item>
+             <ion-item> <b>Pets Allowed:</b> </ion-item>
+             <ion-item> <b>Camping Allowed:</b> </ion-item>
+             <ion-item> <b>Fires Allowed:</b> </ion-item>
+            </ion-card-content>
+            <ion-button>Add to My Trail List</ion-button>
     </ion-card>
 </ion-content>
