--- a/myApp/src/app/Trail-Pages/turkey-creek-trail/turkey-creek-trail.page.html
+++ b/myApp/src/app/Trail-Pages/turkey-creek-trail/turkey-creek-trail.page.html
@@ -10,8 +10,21 @@
     </ion-toolbar>
    
   </ion-header>
-<ion-content>
-    <ion-card>
-        <ion-card-header>Turkey Creek Trail</ion-card-header>
+
+<ion-content padding-top padding-bottom>
+    <ion-card color="primary" padding>
+        <ion-card-header>
+            <ion-card-subtitle>Trail: </ion-card-subtitle> 
+          <ion-card-title>Turkey Creek Trail</ion-card-title>
+          </ion-card-header>
+          <ion-card-content>
+             <ion-item> <b>Address:</b> 1401-1711 City Park Rd, Austin, TX 78730</ion-item>
+             <ion-item> <b>Trail Length:</b> </ion-item>
+             <ion-item> <b>Estimated Hike Time:</b> </ion-item>
+             <ion-item> <b>Pets Allowed:</b> </ion-item>
+             <ion-item> <b>Camping Allowed:</b> </ion-item>
+             <ion-item> <b>Fires Allowed:</b> </ion-item>
+            </ion-card-content>
+            <ion-button>Add to My Trail List</ion-button>
     </ion-card>
 </ion-content>
