--- a/myApp/src/app/tab2/tab2.page.scss
+++ b/myApp/src/app/tab2/tab2.page.scss
@@ -1,3 +1,52 @@
-.map{
-    height: 100%;
-}
+.welcome-card img {
+    max-height: 35vh;
+    overflow: hidden;
+  }
+  .card-background-page {
+  
+    ion-card {
+      position: relative;
+      text-align: center;
+      visibility: hidden;
+    }
+  
+    .card-title {
+      position: absolute;
+      top: 45%;
+      font-size: 2.0em;
+      width: 100%;
+      font-weight: bold;
+      color: #fff;
+    }
+  
+    .card-subtitle {
+      font-size: 1.0em;
+      position: absolute;
+      top: 61%;
+      width: 100%;
+      color: #fff;
+    }
+  
+  }
+  
+  ion-fab{
+    --color-active: rgb(122, 33, 55);
+    border-style: solid;
+    border-radius: 50%;
+    border-width: 2px;
+    border-color: rgb(122, 33, 55);
+    --hover-color:rgb(122, 33, 55);
+    --color-hover:rgb(122, 33, 55);
+    --hover-background:rgb(122, 33, 55);
+    --color-background:rgb(122, 33, 55);
+    
+  
+  
+  }
+  
+  ion-item{
+    font-weight: bold;
+    color: rgb(122, 33, 55);
+    background-color: white ;
+    --background: #c7c95b;
+  }
