--- a/myApp/src/app/Trail-Pages/barton-creek/barton-creek.page.html
+++ b/myApp/src/app/Trail-Pages/barton-creek/barton-creek.page.html
@@ -18,12 +18,15 @@
       <ion-card-title>Barton Creek Trail</ion-card-title>
       </ion-card-header>
       <ion-card-content>
-         <ion-item> <b>Address:</b> 3755 S Capital of Texas Hwy B, Austin, TX 78704</ion-item>
-         <ion-item> <b>Trail Length:</b> </ion-item>
-         <ion-item> <b>Estimated Hike Time:</b> </ion-item>
-         <ion-item> <b>Pets Allowed:</b> </ion-item>
-         <ion-item> <b>Camping Allowed:</b> </ion-item>
-         <ion-item> <b>Fires Allowed:</b> </ion-item>
+         <ion-item> <b padding>Address: </b> 3755 S Capital of Texas Hwy B, Austin, TX 78704</ion-item>
+         <ion-item> <b padding>Trail Length: </b> 13.8 mi</ion-item>
+         <ion-item> <b padding>Average Walk Time: </b> 2.3 hours</ion-item>
+         <ion-item> <b padding>Average Walk Time: </b> 4.45 hours</ion-item>
+         <ion-item> <b padding>Elevation: </b> 606 ft</ion-item>
+         <ion-item> <b padding>Route-Type: </b> Out & Back</ion-item>
+         <ion-item> <b padding>Kid-Friendly: </b> Yes</ion-item>
+         <ion-item> <b padding>Dog-friendly: </b> Yes</ion-item>
+         <ion-item> <b padding>Fires Allowed: </b> No</ion-item>
         </ion-card-content>
         <ion-button expand="full" color="secondary" (click)="alert()">Add to My Trail List</ion-button>
         
