Made changes to homepage
- Added Images to trails
- Deleted unnecessary photos
- Added description to Turkey Creek & St. Edwards trails
- Reorganized file structure

--- a/myApp/src/app/Trail-Pages/st-edwards-park/st-edwards-park.page.html
+++ b/myApp/src/app/Trail-Pages/st-edwards-park/st-edwards-park.page.html
@@ -1,29 +1,31 @@
 <ion-header>
     <ion-toolbar color="primary" >
-        
+
          <ion-img class="modalimg" src="../assets/TXSTimg.jpg" padding-right ></ion-img>
-        
+
             <ion-icon name="arrow-back" slot="start" size="large" routerLink="" routerDirection="root" >Back</ion-icon>
-         
-      
-      
+
+
+
     </ion-toolbar>
-   
+
   </ion-header>
 
 <ion-content padding-top padding-bottom>
     <ion-card color="primary" padding>
         <ion-card-header>
-            <ion-card-subtitle>Trail: </ion-card-subtitle> 
+            <ion-card-subtitle>Trail: </ion-card-subtitle>
           <ion-card-title>St.Edwards Park</ion-card-title>
           </ion-card-header>
           <ion-card-content>
-             <ion-item> <b>Address:</b> 7301 Spicewood Springs Rd, Austin, TX 78759</ion-item>
-             <ion-item> <b>Trail Length:</b> </ion-item>
-             <ion-item> <b>Estimated Hike Time:</b> </ion-item>
-             <ion-item> <b>Pets Allowed:</b> </ion-item>
-             <ion-item> <b>Camping Allowed:</b> </ion-item>
-             <ion-item> <b>Fires Allowed:</b> </ion-item>
+             <ion-item> <b padding>Address:</b> 7301 Spicewood Springs Rd, Austin, TX 78759</ion-item>
+             <ion-item> <b padding>Trail Length: </b> 2.7 mi</ion-item>
+             <ion-item> <b padding>Elevation: </b> 347 ft</ion-item>
+             <ion-item> <b padding>Route-Type: </b> Loop</ion-item>
+             <ion-item> <b padding>Kid-Friendly: </b> Yes</ion-item>
+             <ion-item> <b padding>Dog-friendly: </b> Yes</ion-item>
+             <ion-item> <b padding>Camping Allowed:</b> No</ion-item>
+             <ion-item> <b padding>Fires Allowed:</b> No</ion-item>
             </ion-card-content>
             <ion-button>Add to My Trail List</ion-button>
     </ion-card>
