--- a/myApp/src/app/tab1/tab1.page.html
+++ b/myApp/src/app/tab1/tab1.page.html
@@ -32,7 +32,7 @@
   </ion-card>
 
   <ion-card>
-      <img src="https://assets.simpleviewinc.com/simpleview/image/fetch/c_fill,h_357,q_75,w_537/https://assets.simpleviewinc.com/simpleview/image/upload/crm/austin/Barton-Creek-Green-belt_Austin-Parks-and-Recreation-Department-5--6c2cc4dfa6c4701_6c2cc7c8-c93e-66f1-7dcada42018bbc7c.jpg">
+      <img src="\assets\River place nature trail\River Place Nature Trail.jpg">
       <div class="card-title">River Place Nature Trail</div>
       <div class="card-subtitle">Austin,TX</div>
       <ion-fab vertical="bottom" horizontal="end" slot="fixed">
@@ -52,7 +52,7 @@
   </ion-card>
 
   <ion-card>
-      <img src="https://assets.simpleviewinc.com/simpleview/image/fetch/c_fill,h_357,q_75,w_537/https://assets.simpleviewinc.com/simpleview/image/upload/crm/austin/Barton-Creek-Green-belt_Austin-Parks-and-Recreation-Department-5--6c2cc4dfa6c4701_6c2cc7c8-c93e-66f1-7dcada42018bbc7c.jpg">
+      <img src="\assets\TurkeyCreekTrail\Turkey Creek Trail.jpg">
       <div class="card-title">Turkey Creek Trail</div>
       <div class="card-subtitle">Austin,TX</div>
       <ion-fab vertical="bottom" horizontal="end" slot="fixed">
@@ -72,7 +72,7 @@
   </ion-card>
 
   <ion-card>
-      <img src="https://assets.simpleviewinc.com/simpleview/image/fetch/c_fill,h_357,q_75,w_537/https://assets.simpleviewinc.com/simpleview/image/upload/crm/austin/Barton-Creek-Green-belt_Austin-Parks-and-Recreation-Department-5--6c2cc4dfa6c4701_6c2cc7c8-c93e-66f1-7dcada42018bbc7c.jpg">
+      <img src="\assets\SlaughterCreekTrail\Slaughter Creek Trail 3.jpg">
       <div class="card-title">St. Edward's Park</div>
       <div class="card-subtitle">Austin,TX</div>
       <ion-fab vertical="bottom" horizontal="end" slot="fixed">
